# cdoctest_vscode_extension

./: .gitignore  .vscodeignore  0.setup_dev_env.bat  1.package_publish.bat  CHANGELOG.md  FEATURE.md  README.md  TODO.md  jest.config.js  package-and-publish.bat  package-lock.json  package.json  playwright.config.js  playwright.config.js.map  playwright.config.ts  tsconfig.json  tsconfig.test.json
cmake/: README.md  discover_tests_parse.cmake  example_usage.cmake  util.cmake  util_merged.cmake
images/: README.md  convert-icon.js  convert-icon.sh  convert-to-png.js
src/: config.ts  config.ts.bak  controller.ts  coverage.ts  extension.ts  fileHelper.ts  pyAdapter.ts  runner.ts  testRunner.ts  util.ts  watchers.ts
src/controller/: controller.ts  resultHandler.ts
src/tclist_parser/: ctestParser.ts  file_change_listener.ts
src/test/simple_test/: test.c
src/test/unit_testpp_cmake/: CMakeLists.txt  test_main.cpp
test/config_enable_test/: README.md  test_config_enable.cpp
test/e2e/: E2E_VSCODE_EXTENSION_TEST.md  E2E_VSCODE_EXTENSTION_TEST.md  basic-activation.test.ts  cmake-integration.test.ts  configuration.test.js  configuration.test.js.map  configuration.test.ts  cpp-executable-tests.test.ts  cucumber.mjs  extension.activation.test.js  extension.activation.test.js.map  extension.activation.test.ts  global-teardown.ts  index.js  index.js.map  index.ts  playwright.config.ts  python-tests.test.ts  run-e2e.ts  run-tests-with-coverage.js  run-tests-with-coverage.js.map  run-tests-with-coverage.ts  run-tests.ts  setup.js  setup.js.map  setup.ts  test.discovery.test.js  test.discovery.test.js.map  test.discovery.test.ts  test.execution.test.js  test.execution.test.js.map  test.execution.test.ts  tsconfig.json
test/e2e/features/: extension-loading.feature
test/e2e/helpers/: state-monitor.ts  vscode-manager.ts  vscode-test-helper.js  vscode-test-helper.js.map  vscode-test-helper.ts
test/e2e/lib/: status-manager.ts
test/e2e/specs/: check-extension-enabled-and-test-case-list.spec.ts  cmake-clean-test.spec.ts  cmake-rebuild-ctest.spec.ts  extension-test-panel.spec.ts  simple-vscode-open.spec.ts
test/e2e/steps/: extension-loading.steps.ts
test/e2e/support/: world.ts
test/e2e/test-workspace/: CMakeLists.txt
test/e2e/test-workspace/include/: calculator.h
test/e2e/test-workspace/src/: calculator.cpp  main.cpp
test/e2e/test-workspace/tests/: test_calculator.cpp
test/integrated_catch2_and_cdoctest_cmake_ctest/: CMakeLists.txt  README.md  build_and_test.bat  test_main.cpp
test/integrated_unit_gtest_and_cdoctest_cmake_ctest/: CMakeLists.txt  README.md  test_main.cpp
test/integrated_unit_testpp_and_cdoctest_cmake/: CMakeLists.txt  test_main.cpp  unitest_CMakeLists.txt
test/integrated_unit_testpp_and_cdoctest_cmake_ctest/: CMakeLists.txt  entry.cpp  test_main.cpp
test/integrated_unit_testpp_and_cdoctest_cmake_ctest/subdir_tests/: CMakeLists.txt  hello_test.cpp
test/integrated_unit_testpp_cmake/: CMakeLists.txt  test_main.cpp
test/simple_unit_testpp_cmake/: CMakeLists.txt
test/unittest/: ctestParser.regex.spec.ts  ctestParser.spec.ts
